--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -16,9 +16,10 @@
 
 h1{
     color: rgb(57, 135, 126);
-    background-color:rgb(16, 47, 56)  ;
-    font-size: 50px;
-    border: rgb(155, 206, 222) 2px solid;
+    font-size: 30px;
+    text-align: center;
+    padding: 8px;
+    border: rgb(155, 206, 222) 3px solid;
    
 
 }
@@ -30,51 +31,50 @@ body{
 
 }
 nav{
-    position: sticky; top: 10px;
-    z-index: 100;
+    background-color: rgba(16, 47, 56, 0.433);
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
 
 nav ul{
     list-style-type: none;
+    height: 200px;
+    padding: 15px;
     display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(155, 206, 222);
-    border: rgb(16, 47, 56) 3px solid;
-    font-size: 32px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border: rgb(155, 206, 222) 3px solid;
 }
 
 .enlace{
     text-decoration: none;
-    color: rgb(16, 47, 56) ;
+    color: rgb(155, 206, 222);
 }
 
-.page-center{
-    /* clase para centrar las rs con imagen central */
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
 
 main{
     text-align: center;
 }
 
 .logo{
-    width: 80px;
-    height: 60px;
+    width: 240px;
+    height: 170px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .img1{
-    width: 600px;
-    height: 300px;
+    width: 200px;
+    height: 120px;
+    display: none;
 }
 
 main div ul{
     list-style-type: none;
-   
+    display: flex;
+    justify-content: space-evenly;
 
 }
 main div ul li{
@@ -86,6 +86,7 @@ main div ul li{
 .ptr{
     width: 35px;
     height: 35px;
+    margin-top: 7px;
 }
 
 .instw{
@@ -97,15 +98,16 @@ main div ul li{
 .disc{
     width: 40px;
     height: 40px;
+    margin-top: 5px;
 }
 
 p{
     font-size: 18px;
     color: rgb(155, 206, 222);
-    width: 1000px;
+    
     text-align: center;
-    
-    
+    margin-left: 15px;
+    margin-right: 15px;
     
 }
 
@@ -124,7 +126,8 @@ input{
     font-size: 18px;
     color: rgb(155, 206, 222);
     background-color: rgb(16, 47, 56);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     
 }
 
@@ -134,7 +137,8 @@ select{
     font-size: 18px;
     color: rgb(155, 206, 222);
     background-color: rgb(16, 47, 56);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .az{
@@ -169,7 +173,7 @@ select{
     width: 150px;
     height: 40px;
     font-size: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .center-text{
@@ -179,45 +183,39 @@ select{
 h3{
     color: rgb(155, 206, 222);
    
-    margin-top: 150px;
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .comenzar{
-    font-size: 40px;
+    font-size: 30px;
     background-color: rgb(155, 206, 222);
     border: rgb(16, 47, 56) 3px solid;
     text-decoration: none;
-
+    display: inline-block;
+    color: rgb(16, 47, 56);
+    margin-bottom: 30px;
 }
 
 
 footer{
-    text-align: center;
-}
-
-
-
-table{
+    display: flex;
+    font-size: 16px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 170px;
     color: rgb(155, 206, 222);
-    margin: 0 auto;
- text-align: left;
- border: 1px solid;
-  width: 400px;
-  height: 300px;
-  margin-bottom: 40px;
+    padding-left: 10px;
 }
 
-th, td{
- border: 1px solid;
-}
 
-h4{
-    color: rgb(155, 206, 222);
-    text-align: end;
-}
 
 /* css pagina de noticias */
+
+.noticias{
+    
+}
 .noticia{
     text-align: center;
     color: rgb(155, 206, 222);
