--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,6 +7,14 @@
 
 
 /* Css general y de la pagina de inicio */
+body{
+    background-image: url(../img/gif5.gif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: sans-serif;
+
+}
+
 .centrar-titulo{
     display: flex;
     justify-content: center;
@@ -21,18 +29,12 @@ h1{
     text-align: center;
     padding: 8px;
     border: rgb(155, 206, 222) 3px solid;
-   
+    background-color: rgb(16, 47, 56);
 
 }
-body{
-    background-image: url(../img/gif5.gif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: sans-serif;
 
-}
 nav{
-    background-color: rgba(16, 47, 56, 0.433);
+    background-color: rgba(16, 47, 56, 0.548);
     font-size: 20px;
     margin-bottom: 20px;
 }
@@ -60,16 +62,18 @@ main{
 }
 
 .logo{
-    width: 240px;
-    height: 170px;
+    width: 35vw;
+    height: 17vh;
     margin-top: 10px;
     margin-bottom: 20px;
 }
 
 .img1{
-    width: 200px;
-    height: 120px;
+    width: 50vw;
+    height: 55vh;
     display: none;
+    margin-bottom: 30px;
+    padding-right: 35px;
 }
 
 main div ul{
@@ -105,7 +109,6 @@ main div ul li{
 p{
     font-size: 18px;
     color: rgb(155, 206, 222);
-    
     text-align: center;
     margin-left: 15px;
     margin-right: 15px;
@@ -183,9 +186,12 @@ select{
 
 h3{
     color: rgb(155, 206, 222);
-   
+    font-size: 18px;
     margin-top: 30px;
     margin-bottom: 30px;
+    margin-left: 2px;
+    margin-right: 2px;
+    
 }
 
 .comenzar{
@@ -202,7 +208,7 @@ h3{
 footer{
     display: flex;
     font-size: 16px;
-    flex-direction: column;
+    flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
     height: 170px;
@@ -256,18 +262,13 @@ h5{
 }
 
 .noticias li{
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     font-size: 15px;
 }
 
-.noticias2{
-    max-width: 1260px;
-    margin-left: 130px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
+.evento p{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 /* css pagina de soporte */
@@ -330,28 +331,178 @@ h5{
 
 /* css pagina de informacion */
 
-.info-p{
-    display: flex;
+.info{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 95%;
     justify-content: center;
-    align-items: center;
-    max-width: 1000px;
-    margin: 0 auto;
 }
 
-.agrandar-p{
-    height: 250px;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+
+.info img{
+    width: 100%;
+    height: 30vh;
 }
 
-.img-info{
-    margin-bottom: 30px;
-    width: 1020px;
-    height: 420px;
+.info p{
+    padding: 7px;
 }
 
 .enlace2{
     color: rgb(155, 206, 222);
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 650px){
+    /* Inicio */
+    .centro{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-top: 120px;
+    }
+
+    .centro ul{
+        display: inline-block;
+    }
+
+    .logo{
+        width: 8vw;
+        height: 10vh;
+    }
+
+    .img1{
+        display: inline-block;
+        
+    }
+
+    h5{
+        font-size: 18px;
+    }
+
+
+    /* Soporte */
+    .texta1{
+        width: 80vw;
+    }
+
+    /* comunidad */
+    .texta2{
+        width: 80vw;
+    }
+}
+
+@media screen and (min-width: 875px){
+
+    nav{
+        position: sticky; top: 10px;
+        z-index: 100;
+    }
+    nav ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        height: auto;
+    }
+
+    /* Grid de Noticias */
+
+    .noticias{
+        display: grid;
+        grid-template-columns: repeat(2,2fr);
+        grid-template-areas: 
+        "not-1 not-2"
+        "not-3 not-4"
+        ;
+        padding: 15px;
+        column-gap: 15px;
+        row-gap: 40px;
+    }
+
+    .not-1{
+        grid-area: not-1;
+    }
+
+    .not-2{
+        grid-area: not-2;
+    }
+
+    .not-3{
+        grid-area: not-3;
+    }
+
+    .not-4{
+        grid-area: not-4;
+    }
+
+
+    /* Grid de Información */
+
+    .info{
+        display: grid;
+        grid-template-columns: repeat(2,2fr);
+        grid-template-areas: 
+        "inf-1 inf-2"
+        "inf-3 inf-4"
+        "img2 img2"
+        ;
+        padding: 10px;
+    }
+
+    .info h2{
+        padding: 5px;
+    }
+
+    .info p{
+        height: 30vh ;
+        padding-top: 20px;
+    }
+
+    .inf-1{
+        grid-area: inf-1;
+    }
+
+
+    .inf-2{
+        grid-area: inf-2;
+    }
+
+    .inf-3{
+        grid-area: inf-3;
+    }
+
+    .inf-3 p{
+        height: 45vh;
+    }
+
+    .inf-4{
+        grid-area: inf-4;
+    }
+
+    .inf-4 p{
+        height: 45vh;
+    }
+
+    .img2{
+        grid-area: img2;
+    }
+
+    .info img{
+        height: 55vh;
+    }
+}
+
+@media screen and (min-width: 1245px){
+    .info p{
+        height: 20vh;
+    }
+
+    .inf-3 p{
+        height: 30vh;
+    }
+
+    .inf-4 p{
+        height: 30vh;
+    }
 }
